fixed high contrast background color

--- a/pokemon/styles.css
+++ b/pokemon/styles.css
@@ -44,7 +44,7 @@ nav ul.menu li.active {
 /* --- BODY --- */
 
 body {
-  background-color:	#003287;
+  background-color:	#011f52;
 }
 
 * {
